# docs/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.DepositRequest"
+                            "$ref": "#/definitions/entity.PaymentRequest"
                         }
                     }
                 ],
@@ -58,54 +58,14 @@
                 }
             }
         },
-        "/deposits/history": {
-            "get": {
+        "/payments": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get logged in user deposit history",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "deposits"
-                ],
-                "summary": "Get deposit history",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/entity.HttpResp"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/entity.HttpResp"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/entity.HttpResp"
-                        }
-                    }
-                }
-            }
-        },
-        "/payments/methods": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Lists available payment methods",
+                "description": "Check and refresh payment status if applicable",
                 "consumes": [
                     "application/json"
                 ],
@@ -115,7 +75,18 @@
                 "tags": [
                     "payments"
                 ],
-                "summary": "List payment methods",
+                "summary": "Refresh payment status",
+                "parameters": [
+                    {
+                        "description": "payment request",
+                        "name": "payment",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.XenditCheckPayment"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -308,41 +279,6 @@
         }
     },
     "definitions": {
-        "entity.DepositHistory": {
-            "type": "object",
-            "properties": {
-                "amount": {
-                    "type": "number"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "payment_method": {
-                    "type": "string"
-                },
-                "type": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "entity.DepositRequest": {
-            "type": "object",
-            "required": [
-                "amount",
-                "payment_method"
-            ],
-            "properties": {
-                "amount": {
-                    "type": "number"
-                },
-                "payment_method": {
-                    "type": "string"
-                }
-            }
-        },
         "entity.HttpResp": {
             "type": "object",
             "properties": {
@@ -396,14 +332,22 @@
                 "payment_method": {
                     "type": "string"
                 },
-                "rental": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entity.Rental"
-                    }
+                "status": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "entity.PaymentRequest": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
                 }
             }
         },
@@ -443,6 +387,9 @@
             "properties": {
                 "id": {
                     "type": "integer"
+                },
+                "payment": {
+                    "$ref": "#/definitions/entity.Payment"
                 },
                 "payment_id": {
                     "type": "integer"
@@ -487,12 +434,6 @@
                 "deposit_amount": {
                     "type": "number"
                 },
-                "deposit_histories": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entity.DepositHistory"
-                    }
-                },
                 "email": {
                     "type": "string"
                 },
@@ -518,6 +459,17 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.XenditCheckPayment": {
+            "type": "object",
+            "properties": {
+                "payment_id": {
+                    "type": "string"
+                },
+                "xendit_payment_id": {
                     "type": "string"
                 }
             }
