# handler/deposit.go
@@ -10,7 +10,7 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-// CreateDeposit top up user deposit
+// TopUpDeposit top up user deposit
 //
 // @Summary Top up user deposit
 // @Description Top up logged in user deposit
@@ -18,13 +18,13 @@ import (
 // @Security BearerAuth
 // @Accept json
 // @Produce json
-// @Param deposit body entity.DepositRequest true "deposit request"
+// @Param deposit body entity.PaymentRequest true "deposit request"
 // @Success 200 {object} entity.HttpResp
 // @Failure 400 {object} entity.HttpResp
 // @Failure 500 {object} entity.HttpResp
 // @Router /deposits [post]
-func (h *Handler) CreateDeposit(c echo.Context) error {
-	req := entity.DepositRequest{}
+func (h *Handler) TopUpDeposit(c echo.Context) error {
+	req := entity.PaymentRequest{}
 	if err := c.Bind(&req); err != nil {
 		return h.httpError(c, errors.ErrBadRequest, err.Error())
 	}
@@ -33,62 +33,56 @@ func (h *Handler) CreateDeposit(c echo.Context) error {
 		return h.httpError(c, errors.ErrBadRequest, err.Error())
 	}
 
+	user, err := h.user.Get(c.Request().Context().Value(contextKeyUsername).(string))
+	if err != nil {
+		return err
+	}
+
 	userId := c.Request().Context().Value(contextKeyUserId).(float64)
-	depositReq := entity.DepositHistory{
+	depositReq := entity.Payment{
 		UserId:        int(userId),
 		Amount:        req.Amount,
-		Type:          entity.CreditTransaction,
-		PaymentMethod: req.PaymentMethod,
+		PaymentMethod: "UNDECIDED",
+		Status:        entity.InvoiceStatusPending,
+		Type:          "deposit-saldo",
 	}
-	if err := h.createDeposit(c.Request().Context(), depositReq); err != nil {
-		return h.httpError(c, err)
-	}
-
-	return h.httpSuccess(c, http.StatusCreated, nil)
-}
-
-func (h *Handler) createDeposit(ctx context.Context, req entity.DepositHistory) error {
-	paymentReq := entity.XenditPayment{
-		PaymentMethod: req.PaymentMethod,
-	}
-	if err := h.xendit.CreatePayment(ctx, paymentReq); err != nil {
-		return err
-	}
-
-	// save xendit payment information to deposit/payment
-
-	deposit, err := h.deposit.Create(req)
-	if err != nil {
-		return err
-	}
-	h.logger.Debug(fmt.Sprintf("%v", deposit))
-
-	return nil
-}
-
-// GetDepositHistory returns logged in user deposit history
-//
-// @Summary Get deposit history
-// @Description Get logged in user deposit history
-// @Tags deposits
-// @Security BearerAuth
-// @Accept json
-// @Produce json
-// @Success 200 {object} entity.HttpResp
-// @Failure 400 {object} entity.HttpResp
-// @Failure 500 {object} entity.HttpResp
-// @Router /deposits/history [get]
-func (h *Handler) GetDepositHistory(c echo.Context) error {
-	userId := c.Request().Context().Value(contextKeyUserId).(float64)
-	deposits, err := h.deposit.List(int(userId))
+	resp, err := h.createPayment(c.Request().Context(), depositReq, user)
 	if err != nil {
 		return h.httpError(c, err)
 	}
 
-	resp := entity.DepositHistoryResponse{
-		Total:     deposits.CalculateTotal(),
-		Histories: deposits,
+	return h.httpSuccess(c, http.StatusCreated, resp)
+}
+
+func (h *Handler) createPayment(ctx context.Context, req entity.Payment, user entity.User) (entity.XenditPaymentResponse, error) {
+	payment, err := h.payment.Create(req)
+	if err != nil {
+		return entity.XenditPaymentResponse{}, err
 	}
 
-	return h.httpSuccess(c, http.StatusOK, resp)
+	desc := "Deposit Saldo"
+	exp := "86400"
+	paymentReq := entity.XenditPaymentRequest{
+		Amount:             req.Amount,
+		PaymentMethod:      req.PaymentMethod,
+		PaymentId:          fmt.Sprintf(":deposit-saldo:%v", payment.Id),
+		Currency:           &entity.IdrCurrency,
+		InvoiceName:        &user.FullName,
+		InvoiceEmail:       &user.Email,
+		InvoiceDescription: &desc,
+		InvoiceExpiry:      &exp,
+		Items: []entity.PaymentItems{
+			{
+				Name:     "Deposit Saldo",
+				Price:    float32(req.Amount),
+				Quantity: 1,
+			},
+		},
+	}
+	resp, err := h.xendit.CreatePayment(ctx, paymentReq)
+	if err != nil {
+		return resp, err
+	}
+
+	return resp, nil
 }
